// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Button onClick 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > Button renders as link correctly 1`] = `
<div>
  <a
    aria-label="Text for a11y"
    class="
        button-component
        primary
        xs
        default
        left
        
        className-test
      "
    href="https://www.example.com"
    rel="noopener noreferrer"
    target="_self"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="text "
    >
      Button text
    </span>
  </a>
</div>
`;

exports[`Button > Button renders correctly 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > Button renders icon correctly 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > Button renders kind link correctly 1`] = `
<div>
  <a
    aria-label="Text for a11y"
    class="
        button-component
        primary
        xs
        default
        left
        
        className-test
      "
    href="https://www.example.com"
    rel="noopener noreferrer"
    target="_self"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="text "
    >
      Button text
    </span>
  </a>
</div>
`;

exports[`Button > Button renders snapshot 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > Button renders text correctly 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > onClick 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > renders correctly 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > renders icon correctly 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > renders kind link correctly 1`] = `
<div>
  <a
    aria-label="Text for a11y"
    class="
        button-component
        primary
        xs
        default
        left
        
        className-test
      "
    href="https://www.example.com"
    rel="noopener noreferrer"
    target="_self"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="text "
    >
      Button text
    </span>
  </a>
</div>
`;

exports[`Button > renders snapshot 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;

exports[`Button > renders text correctly 1`] = `
<div>
  <button
    aria-label="Text for a11y"
    class="
          button-component
          primary
          xs
          default
          left
          className-test
        "
    type="button"
  >
    <span
      aria-hidden="true"
      class="
        icon-component
        xs
        
      "
      style="--icon-color: currentColor;"
    >
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
        xmlns:xlink="http://www.w3.org/1999/xlink"
      >
        <title>
          close
        </title>
        <use
          xlink:href="/src/assets/sprite.svg#close"
        />
      </svg>
    </span>
    <span
      class="
          text
          
          
          "
    >
      Button text
    </span>
  </button>
</div>
`;
